8241158: SA TestHeapDumpForInvokeDynamic.java fails when CDS archive is relocated

Reviewed-by: ccheung